--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 jsonschema
 #jsonschema-3.2.0-py2.py3
+
+#TODO REMOVE DEPENDECIES DUE TO CSWUTIL, CKANEXT_SPATIAL, CKANEXT_HARVESTER
+pyproj==1.9.6
 xmltodict==0.12.0
+lxml>=2.3
+ckantoolkit
+geopython
+OWSLib==0.18.0
