Test changing base image for pipeline to solve pylons.app_globals key error
Refs: https://github.com/ckan/ckan/issues/5724
debian:stretch is the image used from CKAN 2.9.3 on the official repo

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,5 +1,5 @@
 # See CKAN docs on installation from Docker Compose on usage
-FROM ubuntu:focal
+FROM debian:stretch
 MAINTAINER Carlo Cancellieri
 
 
