Test changing base image for pipeline to solve pylons.app_globals key error
Refs: https://github.com/ckan/ckan/pull/5928/files
Refs: https://github.com/ckan/ckan/pull/5928

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,7 +1,19 @@
 # See CKAN docs on installation from Docker Compose on usage
-FROM debian:stretch
+FROM ubuntu:focal-20210119
 MAINTAINER Carlo Cancellieri
 
+
+# Set timezone
+ENV TZ=UTC
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+# Setting the locale
+ENV LC_ALL=en_US.UTF-8       
+RUN apt-get update
+RUN apt-get install --no-install-recommends -y locales
+RUN sed -i "/$LC_ALL/s/^# //g" /etc/locale.gen
+RUN dpkg-reconfigure --frontend=noninteractive locales 
+RUN update-locale LANG=${LC_ALL}
 
 # Install required system packages
 RUN apt-get -q -y update \
@@ -26,18 +38,6 @@ RUN apt-get -q -y update \
         curl \
     && apt-get -q clean \
     && rm -rf /var/lib/apt/lists/*
-
-# Set timezone
-ENV TZ=UTC
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
-# Setting the locale
-ENV LC_ALL=en_US.UTF-8       
-RUN apt-get update
-RUN apt-get install --no-install-recommends -y locales
-RUN sed -i "/$LC_ALL/s/^# //g" /etc/locale.gen
-RUN dpkg-reconfigure --frontend=noninteractive locales 
-RUN update-locale LANG=${LC_ALL}
 
 # Define environment variables
 ENV CKAN_HOME /usr/lib/ckan
