--- a/requirements-iso.txt
+++ b/requirements-iso.txt
@@ -1,3 +1,8 @@
+# https://github.com/okfn/docker-ckan/issues/84
+# apk add geos
+# see also ckanext-spatial requirements
+
+
 ckantoolkit
 GeoAlchemy>=0.6
 GeoAlchemy2==0.5.0
